# nixbrew

./: Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml  rust.yml
src/: main.rs
