[package]
name = "nixbrew"
version = "0.1.0"
edition = "2021"
authors = ["Eyuael Berhe <eyuaelberhe@gmail.com>"]
description = "A Homebrew-like CLI for Nix's imperative package management"
license = "MIT" 
repository = "https://github.com/eyuael/nixbrew"
homepage = "https://github.com/eyuael/nixbrew"
keywords = ["nix", "package-manager", "homebrew", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
semver = "1.0"
chrono = { version = "0.4", features = ["serde"] }